# study_onetbb

./: CMakeLists.txt  README.md  main.cpp  test.cpp  test_parallel_reduce.cpp  test_scaled_dot_product_attention.cpp  utils.hpp
